stadardized all back button styling and text, fixed some layout issues on add/edit item form

--- a/client/src/components/AddEditForm/AddEditForm.css
+++ b/client/src/components/AddEditForm/AddEditForm.css
@@ -1,9 +1,3 @@
-/* .post-header {
-    width: 500px;
-    margin: 0 auto;
-    background-color: #fb8122;
-} */
-
 .edit-form-bg {
     padding: 3em 0;
     background-color: #fff;
@@ -20,4 +14,7 @@
     }
 }
 
-
+.addEditBackButton {
+    display: flex;
+    justify-content: flex-start;
+}
